Placeholder Text contrast - https://github.com/humhub/humhub-internal/issues/719#issuecomment-3079192313

--- a/static/scss/_form.scss
+++ b/static/scss/_form.scss
@@ -133,6 +133,7 @@ input::-ms-clear, input::-ms-reveal {
 // Placeholder text for empty content
 .placeholder {
     padding: 10px;
+    color: #77777A;
 }
 
 // HTML5 Placeholder jQuery Plugin
