--- a/static/scss/_mentioning.scss
+++ b/static/scss/_mentioning.scss
@@ -55,10 +55,6 @@
     margin: 0;
 }
 
-.atwho-placeholder {
-    color: var(--hh-text-color-soft3) !important;
-}
-
 .atwho-emoji-entry {
     float: left;
     padding: 4px !important;
